# jelegram

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/boringssl/: CMakeLists.txt
app/boringssl/crypto/aes/: CMakeLists.txt  aes_ige.c
app/boringssl/include/openssl/: aes.h
app/src/androidTest/java/jelegram/forusoul/com/: ConnectionManagerTest.java  ExampleInstrumentedTest.java
app/src/androidTest/java/jelegram/forusoul/com/cipher/: CipherManagerTest.java
app/src/androidTest/java/jelegram/forusoul/com/utils/: ByteUtilsTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BuffersStorage.cpp  BuffersStorage.h  ByteArray.cpp  ByteArray.h  NativeByteBuffer.cpp  NativeByteBuffer.h  javaWrap.h  logging.h  native-lib.cpp
app/src/main/cpp/connections/: ConnectionManager.cpp  ConnectionManager.h
app/src/main/cpp/protocol/: ProtocolSend.cpp  ProtocolSend.h
app/src/main/java/jelegram/forusoul/com/: ApplicationLoader.java  ConnectionManager.java  ConstValues.java
app/src/main/java/jelegram/forusoul/com/cipher/: CipherManager.java
app/src/main/java/jelegram/forusoul/com/connection/: ConnectionManager.java
app/src/main/java/jelegram/forusoul/com/protocol/: IProtocol.java  ReqAuthSendCode.java  ReqClientInnerData.java  ReqDHClient.java  ReqDHParams.java  ReqMessageAck.java  ReqPQInnerData.java  RequestPQ.java  ResDHGenOk.java  ResDHInnerData.java  ResDHParam.java  ResPQ.java
app/src/main/res/layout/: activity_login.xml
app/src/main/res/values/: strings.xml
app/src/test/java/jelegram/forusoul/com/: ExampleUnitTest.java
(+4 files in other folders)
